# woodhouse

./: .envrc  .gitignore  Cargo.toml  LICENSE.md  README.md  devenv.nix  flake.nix  tailwind.config.js
assets/css/: app.css
src/: app_config.rs  config.rs  main.rs
src/task/: loader.rs  mod.rs  parser.rs  task.rs
static/: app.css
tasks/: bad_task.toml  minimal_task.toml  test_task.toml
templates/: index.html  layout.html
templates/partials/: task_card.html
tests/: test_task.toml
