[package]
name = "woodhouse"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
askama = { version = "0.14" }
tower-http = { version = "0.6.6", features = ["fs"] }
